add: translate to hover

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,7 +6,7 @@
 <body>
   <div id="wrapper">
     <a id="video-close-button" href=""></a>
-    <video id="video-player" class="video-js vjs-tech" controls preload="auto" poster="msg-1741619125-235171.jpg">
+    <video id="video-player" class="video-js vjs-tech" controls preload="auto">
       <source src="ted.lasso.s01e01.1080p.web.h264-oath_1597395314_1080p.mp4" type="video/mp4" />
       <track kind="captions" src="http://localhost:3000/ted.lasso.s01e01.1080p.web.h264-oath_1597395314_1080p.vtt"
         srclang="en" label="English" default>
