add: subtitles languages

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,9 +7,9 @@
   <div id="wrapper">
     <a id="video-close-button" href=""></a>
     <video id="video-player" class="video-js vjs-tech" controls preload="auto">
-      <source src="ted.lasso.s01e01.1080p.web.h264-oath_1597395314_1080p.mp4" type="video/mp4" />
-      <track kind="captions" src="http://localhost:3000/ted.lasso.s01e01.1080p.web.h264-oath_1597395314_1080p.vtt"
-        srclang="en" label="English" default>
+      <source src="http://localhost:3000/Black.Mirror.S01E01.WEB.DL.x264-ITSat_1503952150_720p.mp4" type="video/mp4" />
+      <track kind="captions" src="http://localhost:3000/Black.Mirror.S01E01.WEB.DL.x264-ITSat_1503952150_720p-2.vtt"
+        srclang="ru" label="Russian" default>
     </video>
   </div>
 
