--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,8 +8,9 @@
     <a id="video-close-button" href=""></a>
     <video id="video-player" class="video-js vjs-tech" controls preload="auto">
       <source src="http://localhost:3000/Black.Mirror.S01E01.WEB.DL.x264-ITSat_1503952150_720p.mp4" type="video/mp4" />
-      <track kind="captions" src="http://localhost:3000/Black.Mirror.S01E01.WEB.DL.x264-ITSat_1503952150_720p-2.vtt"
-        srclang="ru" label="Russian" default>
+      <track kind="subtitles" src="http://localhost:3000/Black.Mirror.S01E01.WEB.DL.x264-ITSat_1503952150_720p-2.vtt"
+        srclang="ru" label="ru">
+      <track kind="subtitles" src="Black.Mirror.S01E01.WEB.DL.x264-ITSat_1503952150_720p.vtt" srclang="en" label="en">
     </video>
   </div>
 
