--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,14 +1,16 @@
 <head>
   <link href="https://vjs.zencdn.net/8.3.0/video-js.css" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="css/styles.css" rel="stylesheet" />
 </head>
 
 <body>
   <div id="wrapper">
     <a id="video-close-button" href=""></a>
     <video id="video-player" class="video-js vjs-tech" controls preload="auto">
-      <source src="http://localhost:3000/Black.Mirror.S01E01.WEB.DL.x264-ITSat_1503952150_720p.mp4" type="video/mp4" />
+      <source src="http://localhost:3001/Black.Mirror.S01E01.WEB.DL.x264-ITSat_1503952150_720p.mp4" type="video/mp4" />
     </video>
   </div>
+  <!-- <script src="../../dist/bundle.js"></script> -->
   <script src="dist/bundle.js"></script>
+
 </body>
