--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,4 +1,5 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link href="https://vjs.zencdn.net/8.3.0/video-js.css" rel="stylesheet" />
   <link href="css/styles.css" rel="stylesheet" />
 </head>
@@ -6,7 +7,7 @@
 <body>
   <div id="wrapper">
     <a id="video-close-button" href=""></a>
-    <video id="video-player" class="video-js vjs-tech" controls preload="auto">
+    <video id="video-player" class="video-js vjs-tech" controls preload="auto" playsinline crossorigin="anonymous">
       <source src="http://localhost:3000/Black.Mirror.S01E01.WEB.DL.x264-ITSat_1503952150_720p.mp4" type="video/mp4" />
     </video>
   </div>
