--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,7 +8,9 @@
   <div id="wrapper">
     <a id="video-close-button" href=""></a>
     <video id="video-player" class="video-js vjs-tech" controls preload="auto" playsinline crossorigin="anonymous">
-      <source src="http://localhost:3000/Black.Mirror.S01E01.WEB.DL.x264-ITSat_1503952150_720p.mp4" type="video/mp4" />
+      <source
+        src="https://1363-217-196-161-229.ngrok-free.app/Black.Mirror.S01E01.WEB.DL.x264-ITSat_1503952150_720p.mp4"
+        type="video/mp4" />
     </video>
   </div>
   <!-- <script src="../../dist/bundle.js"></script> -->
